--- a/part-3/index.html
+++ b/part-3/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Video 02</title>
+  <title>Animation Part-3</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -32,7 +32,6 @@
       <img class="bottom-left-img" src="https://images.unsplash.com/photo-1632345031435-8727f6897d53?w=1000&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8bmFpbCUyMHBvbGlzaHxlbnwwfDB8MHx8fDA%3D" alt="" height="200">
       <img class="bottom-right-img" src="https://images.unsplash.com/photo-1602625763089-638da9cf5dd5?q=80&w=986&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" height="300">
     </div>
-    <span class="scroll">Scroll Down 👇</span>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="script.js"></script>
